fix simple hero text spacing

--- a/themes/custom/hestiag/css/main.css
+++ b/themes/custom/hestiag/css/main.css
@@ -1302,7 +1302,9 @@ h1, h2, h3, h4, h5, h6 {
   margin-bottom: 100px; }
 
 .breadcrumb-banner {
-  padding: 90px 0 100px 0; }
+  /* padding: 90px 0 100px 0; */
+  padding: 125px 0 75px 0;
+ }
   .breadcrumb-banner h1 {
     font-weight: 600;
     color: #fff; }
